# Marching-Primitives

./: README.md  pyproject.toml
MATLAB/: demo_script.m
Python/: sdf_superquadric.py  show_superquadrics.py
assets/models/: ashtray.glb  basin.glb  bathtub.glb  bed.glb  bottle.glb  bowl.glb  box.glb  chair.glb  cubby.glb  cup.glb  cupboard.glb  display.glb  ladle.glb  plate.glb  pot.glb  riser.glb  shelf.glb  shoe_rack.glb  stool.glb  table.glb  trashbin.glb
data/: chair4_normalized_sq.csv  chair4_normalized_sq.stl  chair4_normalized_watertight.ply  chair4_normalized_watertight.stl
data/chair1/: chair1_normalized_sq.csv  chair1_normalized_sq.mat  chair1_normalized_sq.npz  chair1_normalized_sq.stl  chair1_normalized_watertight.ply  chair1_normalized_watertight.stl
data/chair10/: chair10_normalized_sq.csv  chair10_normalized_sq.mat  chair10_normalized_sq.stl  chair10_normalized_sq_py.npz  chair10_normalized_watertight.ply  chair10_normalized_watertight.stl
data/chair11/: chair11_normalized_sq.csv  chair11_normalized_sq.mat  chair11_normalized_sq.npz  chair11_normalized_sq_py.stl  chair11_normalized_watertight.ply  chair11_normalized_watertight.stl
data/chair2/: chair2_normalized_sq.mat  chair2_normalized_sq.npz  chair2_normalized_sq.stl  chair2_normalized_sq_py.csv  (+2 more)
mesh2sdf_preparation/: mesh2sdf_convert.py
script/: visualize_sdf.py
scripts/: SCRIPTS_GUIDE.md  batch_main.py  batch_mesh2sdf_convert.py  compare_matlab_python.py  compare_sq.py  demo_script.py  glb2sdf_convert.py  main.py  mesh2sdf_convert.py  visualize_superquadrics.py
(+171 files in other folders)
